<resources>
    <string name="app_name">Vocabulary Trainer</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="title_activity_word_adder">Add Words</string>
    <string name="title_activity_word_adder_edit">Edit Word</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="entry_missing"><![CDATA[<empty>]]></string>

    <string name="explanator_intro">Each entry must contain one english word and one translated word or description.
        It can contain both. If you want to add synonyms to a word, use comma to separate them.</string>
    <string name="explanator_accepted_synonyms">Accepted synonyms represent words which you are not targeting to learn,
        but they are still accepted as a correct answer. They will never appear as a part of question.</string>
    <string name="explanator_note">Note is displayed in quiz next to a word in a question. It is used
        to resolve any ambiguity in its meaning.\nFor example using \"light\" is not enough, so we can
        add note like \"weight\" or remove possibility of other meaning \"not bright\".</string>
    <string name="explanator_demand">Demand is used to decrease amount of correct answers.
        When there are multiple correct answers due to synonyms, we can hint which one are we
        looking for.\nFor example we have to guess what is \"A young person with exceptional
        qualities or abilities\". Word \"genius\" matches the description, but it is too easy, and not what we are looking for.
        So we can add demand \"not genius\" or a little more suggestive \"on p\" to get \"prodigy\".</string>
    <string name="explanator_categories">With categories you can group words that belong together.
        They can be separate words by grammatical features, profession… In fact it is recommended
        to use categories that specify grammatical type like: \"noun\", \"adjective\", \"verb\", \"adverb\",
        because game generators can use this information to create better quizzes.
        \nFor example word \"constellation\" could have categories: \"noun\", \"science\", \"astronomy\".</string>
</resources>
